# UPS

client/: app.py  card.py  deck.py  game_ui.py  main.py  main_menu.py  network_client.py  player.py
game_server/: CMakeLists.txt  card.cpp  card.h  deck.cpp  deck.h  json.cpp  json.h  lobby.cpp  lobby.h  main.cpp  player.h  server.cpp  server.h
